[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/buttons/color_base.png" type="Texture" id=1]
[ext_resource path="res://assets/images/buttons/color_color.png" type="Texture" id=2]
[ext_resource path="res://scenes/buttons/ColorButton.gd" type="Script" id=3]
[ext_resource path="res://assets/images/buttons/color_highlight.png" type="Texture" id=4]

[node name="ColorButton" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -44.0
margin_right = 44.0
margin_bottom = 44.0
rect_min_size = Vector2( 88, 88 )
script = ExtResource( 3 )

[node name="ButtonHighlight" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -52.0
margin_right = 52.0
margin_bottom = 52.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 52, 52 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="ButtonHighlight"]

[node name="ButtonBase" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 1 )

[node name="ButtonColor" type="TextureRect" parent="ButtonBase"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[connection signal="pressed" from="ButtonBase" to="." method="_on_button_pressed"]
